...
            android:padding="@dimen/size_xxs_8"
            android:gravity="center_vertical"
            android:text="@string/statistic"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/statistic_close"
            app:srcCompat="@drawable/ic_clear_text_white_24dp"
            android:background="@android:color/transparent"
            android:padding="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
...
